--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -25,6 +25,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 #*: The petticoats and '''skirts''' ordinarily worn are decidedly the heaviest part of the dress ; hence it is necessary that some reform should be effected in these.
 #* '''1891''', {{w|Arthur Conan Doyle}}, ''The Red-Headed League''
 #*: “It's all clear,” he whispered. “Have you the chisel and the bags? Great Scott! Jump, Archie, jump, and I'll swing for it!”<br>Sherlock Holmes had sprung out and seized the intruder by the collar. The other dived down the hole, and I heard the sound of rending cloth as Jones clutched at his '''skirts'''.
+#* {{quote-book|1=en|year=1912|author=Sir Arthur Conan Doyle|authorlink=Arthur Conan Doyle|title=The Lost World|url=http://www.gutenberg.org/cache/epub/139/pg139.txt|passage=I had sprung to my feet. I was speaking, and yet I had prepared no words. Tarp Henry, my companion, was plucking at my '''skirts''' and I heard him whispering, "Sit down, Malone! Don't make a public ass of yourself."}}
 # A loose edging to any part of a dress.
 #* '''July 27, 1713''', {{w|Joseph Addison}}, ''The Guardian'' no. 118
 #*: A narrow lace, or a small '''skirt''' of fine ruffled linen, which runs along the upper part of the stays before, and crosses the breast, being a part of the tucker, is called the modesty piece.
