/*Vietnamese*/added reference; expanded readings <坏#61337466>

--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -10,7 +10,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=41190|canj=GMF|ids=⿰土不}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0225.140|dkj=04930|dj=0460.050|hdz=10421.110|uh=574F|ud=22351|bh=A7A5|bd=42917}}
 
 ----
@@ -35,7 +35,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # [[unfired]] [[pottery]] and [[brick]]s; [[base]]
 # [[low]] [[hill]]
@@ -74,7 +74,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=배|mr=pae}}
+{{ko-hanja|배}}
 
 # {{rfdef|ko|sort=土04}}
 
@@ -83,6 +83,9 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[hoại]]|rs=土04}}
+{{vi-readings|hanviet=phôi|nom=hoai,hoại,hoải,phôi|rs=土04}}
 
 # {{rfdef|vi|sort=土04}}
+
+===References===
+* [http://nomfoundation.org/common/nom_details.php?codepoint=574F Nom Foundation]
