/* Verb */ quote <creep#61365759>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -18,9 +18,9 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 #: {{syn|en|crawl}}
 # {{lb|en|intransitive}} Of [[plant]]s, to grow across a surface rather than upwards.
 # {{lb|en|intransitive}} To move slowly and quietly in a particular direction.
-#* {{quote-book
-|en
-|year=1967
+#: {{uxi|en|He tried to '''creep''' past the guard without being seen.}}
+#* {{quote-journal|en|year=1961|month=November|title=More accelerations in the French winter timetables|journal=Trains Illustrated|page=670|text=Electrification of the Eastern Region main line from [[Strasbourg]], incidentally, is steadily '''creeping''' nearer to Paris, and is now complete as far as Château Thierry, 59 miles away; [...].}}
+#* {{quote-book|en|year=1967
 |first=Barbara
 |last=Sleigh
 |authorlink=Barbara Sleigh
@@ -33,7 +33,6 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 |url=
 |passage = She '''crept''' up the stairs, keeping well into the side because she knew they were less likely to creak this way.
 }}
-#: {{uxi|en|He tried to '''creep''' past the guard without being seen.}}
 # {{lb|en|intransitive}} To make small gradual changes, usually in a particular direction.
 #: {{uxi|en|Prices have been '''creeping''' up all year.}}
 # To move in a stealthy or secret manner; to move imperceptibly or clandestinely; to steal in; to insinuate itself or oneself.
