--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -285,7 +285,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Chinese:
 *: Mandarin: {{t-check|cmn|代價}} {{t+check|cmn|代价|tr=dàijìa}}
 * Czech: {{t+|cs|cena|f}}
-* Finnish: {{t+|fi|hinta}}
+* Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * French: {{t+|fr|coût|m}}
 * Galician: {{t+|gl|custo|m}}
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
