--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -139,6 +139,7 @@
 * Telugu: {{t|te|చెక్|sc=Telu}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก}}
 * Tibetan: {{t|bo|ཅེ་ཁེ།|sc=Tibt}}
+* Tigrinya: {{t|ti|ሪፓብሊክ ቸክ}}
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}, {{t+|tr|Çekya}}
 * Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
 * Udmurt: {{t|udm|Чехия|sc=Cyrl}}
