t+ti:[[እስራኤል]] ([[WT:EDIT|Assisted]]) <Israel#61371152>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -189,6 +189,7 @@ From {{der|en|enm|Israel}}, from {{der|en|ang|-}}, borrowed from {{der|en|la|Isr
 * Telugu: {{t|te|ఇజ్రాయిల్}}
 * Thai: {{t+|th|อิสราเอล}}
 * Tibetan: {{t|bo|ཨི་སི་ར་ཨེལ།}}
+* Tigrinya: {{t|ti|እስራኤል}}
 * Turkish: {{t+|tr|İsrail}}
 * Turkmen: {{t|tk|Izrail}}, {{t|tk|Ysraýyl}}
 * Ukrainian: {{t+|uk|Ізра́їль|m}}
