/*Chinese*/replaced content with soft redirect <坖#61371834>

--- a/en/坖/坖.13017.wikitext
+++ b/en/坖/坖.13017.wikitext
@@ -4,27 +4,10 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=MMUG|ids=⿱元土}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0226.100|dkj=04943|dj=0461.100|hdz=10421.080|uh=5756|ud=22358}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=jì
-|c=gei6
-|mc=y
-|oc=y
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|zh|sort=土04}}
-
-===References===
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+{{zh-see|忌|a}}
