--- a/en/坟/坟.13026.wikitext
+++ b/en/坟/坟.13026.wikitext
@@ -5,7 +5,7 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GYK|ids=⿰土文}}
 
-====References====
+===Further reading===
 * {{Han ref|kx=0226.101|hdz=10426.080|uh=575F|ud=22367}}
 
 ----
@@ -18,6 +18,9 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[vun]]|rs=土04}}
+{{vi-readings|hanviet=phần|nom=phần,vun|rs=土04}}
 
 # {{rfdef|vi|sort=土04}}
+
+===References===
+* [http://nomfoundation.org/common/nom_details.php?codepoint=575F Nom Foundation]
