t+fi:[[oksanhaara]] ([[WT:EDIT|Assisted]]) <branch#61377152>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -206,7 +206,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 *: Mandarin: {{t+|cmn|分支|tr=fēn zhī|sc=Hani}}
 * Dutch: {{t+|nl|tak}}
 * Estonian: {{t|et|haru}}
-* Finnish: {{t+|fi|haara}}, {{t+|fi|hanka}}
+* Finnish: {{t+|fi|haara}}, {{t+|fi|hanka}}, {{t|fi|oksanhaara}}
 * French: {{t+|fr|branche|f}}
 * German: (''branching roads or rivers'') {{t+|de|Abzweigung|m}}, (''rare'') {{t|de|Ästelung|m}}, (''rare'') {{t|de|Zweigung|m}}
 * Greek: {{t+|el|διακλάδωση|f|sc=Grek}}, {{t+|el|κλάδος|m|sc=Grek}}, {{t+|el|παρακλάδι|n|sc=Grek}}
