--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -236,7 +236,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 {{trans-bottom}}
 
 {{trans-top|creek or stream which flows into a larger river}}
-* Finnish: {{t+|fi|sivujoki}}, {{t+|fi|joenhaara}}
+* Finnish: {{t+|fi|sivujoki}}
 * French: {{t+|fr|affluent|m}}
 {{trans-mid}}
 * Slovak: {{t|sk|prítok}}
