t+fi:[[toimiala]] ([[WT:EDIT|Assisted]]) <branch#61377171>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -316,7 +316,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Czech: {{t+|cs|obor|m}}
 * Danish: {{t+|da|område}}, {{t+|da|gren|c}}, {{t|da|branche|c}}
 * Dutch: {{t+|nl|branch}} (of business), {{t+|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
-* Finnish: {{t+|fi|ala}}
+* Finnish: {{t+|fi|ala}}, {{t+|fi|toimiala}}
 * French: {{t+|fr|branche|f}}
 * Georgian: {{t|ka|დარგი}}, {{t|ka|სფერო}}
 * German: {{t+|de|Branche|f}} (of business), {{t+|de|Zweig|m}}, {{t+|de|Gebiet|n}}, {{t+|de|Wirtschaftszweig|m}}
