--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -86,7 +86,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 *: Lower Sorbian: {{t|dsb|Jugosłowjańska|f}}
 *: Upper Sorbian: {{t|hsb|Juhosłowjanska|f}}
 * Spanish: {{t+|es|Yugoslavia|f}}, {{t+|es|Yugoeslavia|f}}
-* Swedish: {{t+|sv|Jugoslavien}}
+* Swedish: {{t+|sv|Jugoslavien|n}}
 * Tagalog: {{t|tl|Yugoslabya}}, {{t|tl|Hugoslabya}}
 * Tajik: {{t+|tg|Югославия}}
 * Thai: {{t|th|ยูโกสลาเวีย}}
