--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -174,6 +174,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Asturian: {{t|ast|derechu}}
 * Bashkir: {{t|ba|төҙ}}
 * Belarusian: {{t|be|прамы́}}, {{t|be|про́сты}}
+* Bengali: {{t|bn|সিধা}}, {{t|bn|সোজা}}, {{t|bn|সরল}}
 * Bulgarian: {{t+|bg|прав}}
 * Burmese: {{t+|my|ဖြောင့်|sc=Mymr}}, {{t+|my|စင်း|sc=Mymr}}
 * Chamicuro: {{t|ccc|nanatolo}}
