--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -94,7 +94,7 @@ From {{inh|en|enm|floten}}, from {{inh|en|ang|flotian|t=to float}}, from {{der|e
 * Lithuanian: {{t|lt|plūduriuoti|impf}}, {{t+|lt|plaukti|impf}}
 {{trans-mid}}
 * Malay: {{t+|ms|terapung}}
-* Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}, {{t|mi|rewa}}, {{t|mi|rewarewa}}
+* Maori: {{t|mi|mānu}}, {{t|mi|pōrena}} {{qualifier|as oil on water}}, {{t|mi|kōrewarewa}}, {{t|mi|rewa}}, {{t|mi|rewarewa}}, {{t|mi|whakamāpuna}}
 * Norman: {{t|nrf|fliotter}}
 * Old English: {{t|ang|flēotan}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
