--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -469,14 +469,15 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 #*: {{...}} these animals lacked self-correcting mechanisms of the kind seen in modern head-'''butters''' such as goats and big-horn sheep that would have kept the tremendous forces aligned with the rest of the skeleton.
 {{topics|en|Condiments|Dairy products|Fats and oils}}
 
-----
-
 === Etymology 3 ===
 ''Derived from the aviation slang term''
 
 ==== Adjective ====
+{{en-adj}}
+# Very smooth, very soft  
+#: ''That landing was total '''butter'''!''
 
-# Very smooth, very soft  ''That landing was total butter!''
+----
 
 ==French==
 
