--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -64,6 +64,7 @@ From {{inh|en|enm|souken}}, {{m|enm|suken|}}, from {{inh|en|ang|sūcan|t=to suck
 # {{lb|en|transitive}} To [[pull]] (something) in a given direction, especially without direct contact. {{defdate|from 17th c.}}
 # {{lb|en|transitive|slang|vulgar}} To perform [[fellatio]]. {{defdate|from 20th c.}}
 # {{lb|en|chiefly|North American||intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
+#* {{quote-journal |en |work=Charlotte Observer |date=1969-11-02 |page=H-25 |title=The USS Pueblo: 22: Panmunjom: General Pak Had One Last Trump |passage=Schumacher recalls Buchner had also written 'Communism '''sucks'''' on the underside of his table |url=https://www.newspapers.com/clip/66285437/communism-sucks/}}
 #* {{quote-book  |en |chapter=[letter to Steve Geller] |date=1970-01-08 |year_published=2000 |title=Fear and Loathing in America  |page=251 |url=https://archive.org/details/fearloathinginam00thom/page/250/mode/2up |publisher=Simon & Schuster |location=New York |isbn=9780684873152 |author=Hunter S. Thompson |authorlink=Hunter S. Thompson|passage=it has a few very high points . . . but as a novel, it '''sucks'''}}
 
 =====Conjugation=====
