--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -53,6 +53,7 @@
 #* {{zh-x|箭鏃 傅 毒藥|arrowheads '''laced with''' poison|CL|ref={{RQ:Manshu|4|The Yù Tribe (喻部落)|17}}}}
 #* {{zh-x|繡面蠻 初生 後 出月，以 針刺 面-上，以 青黛 傅 之。|The Face Tattoo Barbarians are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.|CL|ref={{RQ:Manshu|4|The Black, Gold and Silver Tooth Barbarians (黑金銀齒蠻) and the Leg and Face Tattoo Barbarians (繡腳面蠻) of Yǒngchāng (Prefecture) (永昌; ie. modern Baoshan)|18}}}}
 # {{surname|zh}}
+#: {{zh-x|^傅 ^雷|{{w|Fu Lei}}}}
 
 ====Usage notes====
 See {{zh-l|*付}}.
