/* Translations */ added cherokee translation <coat#61428010>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -66,6 +66,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Bulgarian: {{t+|bg|сако|n|sc=Cyrl}}, {{t+|bg|жакет|m|sc=Cyrl}}, {{t+|bg|пардесю́|n}}, {{t+|bg|палто́|n}}
 * Burmese: {{t+|my|အင်္ကျီ}}, {{t+|my|လောင်းကုတ်အင်္ကျီ}}, {{t+|my|ကုတ်}}
 * Catalan: {{t+|ca|abric|m}}, {{t+|ca|casaca|f}}
+* Cherokee: {{t|chr|ᎦᏌᎴᎾ}}
 * Chichewa: {{t|ny|khothi}}
 * Chinese:
 *: Mandarin: {{t+|cmn|外衣|tr=wàiyī|sc=Hani}}, {{t+|cmn|大衣|tr=dàyī|sc=Hani}}, {{t+|cmn|外套|tr=wàitào|sc=Hani}}
