/*Chinese*/added alternative form; expanded glyph origin <坒#61430726>

--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -4,16 +4,17 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=21104|canj=PPG|ids=⿱比土}}
 
-====References====
+===Further reading===
 {{Han ref|kx=0226.020|dkj=04933|dj=0461.010|hdz=10422.080|uh=5752}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=㘩}}
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|比|土|c1=p|c2=s|ls=psc|t2=earth}}.
 
 ===Etymology 1===
 
@@ -29,7 +30,7 @@
 }}
 
 ====Definitions====
-{{zh-hanzi}}
+{{head|zh|Han character}}
 
 # to [[connect]]
 
