/* Translations */ added cherokee translation <feel#61451351>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -100,6 +100,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Bashkir: {{t|ba|һиҙеү}}
 * Belarusian: {{t|be|адчува́ць|impf|sc=Cyrl}}, {{t|be|адчу́ць|pf|sc=Cyrl}}
 * Bulgarian: {{t+|bg|опипвам|sc=Cyrl}}
+* Cherokee: {{t|chr|ᎠᏒᏂᎭ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|触摸|tr=chùmō|sc=Hans}}, {{t+|cmn|触|tr=chù|sc=Hans}}, {{t+|cmn|摸|tr=mō|sc=Hans}}
 * Czech: {{t+|cs|cítit}}
