--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -395,8 +395,8 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 * {{IPA|id|[ɪsˈrael]}}
 * {{hyphenation|id|Is|ra|él}}
 
-===Noun===
-{{id-noun|head=|pl=-}}
+===Proper noun===
+{{head|id|proper noun|head=|pl=-}}
 
 # {{l|en|Israel}}.
 
