--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -342,6 +342,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Atayal: {{t|tay|mu’ bicyu}}
 * Breton: {{t-check|br|[[ober]] [[kurun]]}} <!-- was "[[ober]] [[kurun]]" - assumed sum-of-parts; if an idiom, drop [[links]] to [[words]]. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-check|br|taranal}}, {{t-check|br|taraniñ}}
 * Catalan: {{t+|ca|tronar}}
+* Cherokee: {{t|chr|ᎠᏴᏓᏆᎶᎠ}}
 * Chinese:
 *: Cantonese: {{t|yue|行雷|tr=haang4 leoi4}}
 *: Hakka: {{t|hak|打雷公|tr=tá-lùi-kûng}}
