--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -61,6 +61,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * Estonian: {{t+|et|seniit}}
 * Finnish: {{t+|fi|zeniitti}}
 * French: {{t+|fr|zénith|m}}
+* Galician: {{t+|gl|cénit|m}}
 * German: {{t+|de|Zenit|m}}
 * Greek: {{t+|el|ζενίθ|n}}
 * Hebrew: {{t+|he|זֶנִית|f|tr=zenit}}
