t+gl:[[cénit]] ([[WT:EDIT|Assisted]]) <zenith#61470366>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -132,6 +132,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, from {{der|en|ar|سَمْ
 * Estonian: {{t+|et|seniit}}
 * Finnish: {{t+|fi|huippu}}, {{t+|fi|huipennus}}, {{t|fi|huippukohta}}, {{t+|fi|kohokohta}}
 * French: {{t+|fr|zénith|m}}
+* Galician: {{t+|gl|cénit|m}}
 * Georgian: {{t|ka|ზენიტი}}
 * German: {{t+|de|Zenit|m}}
 * Greek: {{t+|el|απόγειο|n}}, {{t+|el|ζενίθ|n}}
