--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -23,10 +23,11 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 
 #  A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
-#: ''peanut '''butter'''''
+#: {{ux|en|peanut '''butter'''}}
+#: {{ux|en|soy '''butter'''}}
+#: {{ux|en|chocolate '''butter'''}}
 # {{lb|en|obsolete|chemistry}} Any specific [[soft]] [[substance]].
-#:
-#:'''''Butter''' of antimony; '''butter''' of arsenic''
+#: {{ux|en|'''Butter''' of antimony; '''butter''' of arsenic}}
 # {{lb|en|aviation|slang}} A smooth plane landing.
 
 =====Derived terms=====
@@ -410,7 +411,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[spread]] butter on.
-#: '''''Butter''' the toast.''
+#: {{ux|en|'''Butter''' the toast.}}
 # To move one's weight backwards or forwards onto the tips or tails of one's skis or snowboard so only the tip or tail is in contact with the snow.
 # {{lb|en|slang|obsolete|transitive}} To [[increase]] (stakes) at every [[throw]] of [[dice]], or every [[game]].
 #: {{rfquotek|en|Johnson}}
