--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -14,29 +14,29 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{en-verb}}
 
 # {{lb|en|transitive|intransitive}} To apply a [[force]] to (an object) such that it moves [[away]] from the person or thing applying the force.
-#: ''In his anger he '''pushed''' me against the wall and threatened me.''
-#: ''You need to '''push''' quite hard to get this door open.''
+#: {{ux|en|In his anger he '''pushed''' me against the wall and threatened me.}}
+#: {{ux|en|You need to '''push''' quite hard to get this door open.}}
 # {{lb|en|transitive}} To continually attempt to persuade (a person) into a particular course of action.
 #* {{RQ:Swift Examiner 18}}
 #*: We are '''pushed''' for an answer.
-#* '''Deember 22, 1711''', letter to ''The Spectator''
+#* '''December 22, 1711''', letter to ''The Spectator''
 #*: Ambition{{...}} '''pushes''' the soul to such actions as are apt to procure honour and reputation to the actor.
 # {{lb|en|transitive}} To press or urge forward; to drive.
-#: ''to '''push''' an objection too far; to '''push''' one's luck''
+#: {{ux|en|to '''push''' an objection too far; to '''push''' one's luck}}
 #* {{RQ:Dryden AM|133}}
 #*: to '''push''' his fortune
 # {{lb|en|transitive}} To continually [[promote]] (a point of view, a product for sale, etc.).
-#: ''Stop '''pushing''' the issue &mdash; I'm not interested.''
-#: ''They're '''pushing''' that perfume again.''
-#: ''There were two men hanging around the school gates today, '''pushing''' drugs.''
+#: {{ux|en|Stop '''pushing''' the issue &mdash; I'm not interested.}}
+#: {{ux|en|They're '''pushing''' that perfume again.}}
+#: {{ux|en|There were two men hanging around the school gates today, '''pushing''' drugs.}}
 # {{lb|en|intransitive}} To continually [[exert]] oneself in order to achieve a goal.
 #* {{quote-book|en|title=How to be an artist without losing your mind, your shirt, or your creative compass|author=JoAnneh Nagler|year=2016|ISBN=9781581573671|page=91
 |passage=Don't think that if you keep '''pushing''' harder and harder, it will make you succeed faster or earn more.}}
 # {{lb|en|informal|transitive}} To [[approach]]; to come close to.
-#: ''My old car is '''pushing''' 250,000 miles.''
-#: ''He's '''pushing''' sixty.'' (= ''he's nearly sixty years old'')
+#: {{ux|en|My old car is '''pushing''' 250,000 miles.}}
+#: {{ux|en|He's '''pushing''' sixty.}} (= ''he's nearly sixty years old'')
 # {{lb|en|intransitive}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
-#: ''During childbirth, there are times when the obstetrician advises the woman not to '''push'''.''
+#: {{ux|en|During childbirth, there are times when the obstetrician advises the woman not to '''push'''.}}
 # {{lb|en|intransitive}} To continue to attempt to persuade a person into a particular course of action.
 # To make a higher [[bid]] at an [[auction]].
 # {{lb|en|poker}} To make an [[all-in]] [[bet]].
@@ -301,18 +301,18 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 {{en-noun|~}}
 
 # A short, directed application of [[force]]; an act of pushing.
-#: ''Give the door a hard '''push''' if it sticks.''
+#: {{ux|en|Give the door a hard '''push''' if it sticks.}}
 # An act of tensing the muscles of the abdomen in order to expel its contents.
-#: ''One more push and the baby will be out.''
+#: {{ux|en|One more '''push''' and the baby will be out.}}
 # A [[great]] [[effort]] (to do something).
-#: ''Some details got lost in the '''push''' to get the project done.''
-#: ''Let's give one last push on our advertising campaign.''
+#: {{ux|en|Some details got lost in the '''push''' to get the project done.}}
+#: {{ux|en|Let's give one last '''push''' on our advertising campaign.}}
 # An attempt to persuade someone into a particular course of action.
 # {{lb|en|military}} A [[marching]] or [[drill]] [[maneuver]]/[[manoeuvre]] performed by moving a [[formation]] (especially a [[company front]]) [[forward]] or [[toward]] the [[audience]], usually to accompany a dramatic [[climax]] or [[crescendo]] in the music.
 # A wager that results in no loss or gain for the bettor as a result of a tie or even score
 # {{lb|en|computing}} The addition of a data item to the top of a [[stack]].
 # {{lb|en|Internet|uncountable}} The situation where a [[server]] sends data to a [[client]] without waiting for a request.
-#: ''server '''push'''; a '''push''' technology''
+#: {{ux|en|server '''push'''; a '''push''' technology}}
 # {{lb|en|chiefly|Australia}} A particular [[crowd]] or [[throng]] or people.
 #* '''1891''', Banjo Paterson, ''[[s:An Evening in Dandaloo|An Evening in Dandaloo]]''
 #*: Till some wild, excited person
