--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -58,6 +58,7 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 * Bulgarian: {{t+|bg|бро́я|impf}}
 * Burmese: {{t+|my|ရေ}}, {{t+|my|ရေတွက်}}
 * Catalan: {{t+|ca|comptar}}
+* Cherokee: {{t|chr|ᏓᏎᎯᎭ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|數|sc=Hani}}, {{t+|cmn|数|tr=shǔ|sc=Hani}}, {{t+|cmn|計數|sc=Hani}}, {{t+|cmn|计数|tr=jìshù|sc=Hani}}, {{t+|cmn|計算|sc=Hani}}, {{t+|cmn|计算|tr=jìsuàn|sc=Hani}}, {{t+|cmn|算|tr=suàn|sc=Hani}}, {{t+|cmn|點|sc=Hani}}, {{t+|cmn|点|tr=diǎn|sc=Hani}}
 * Classical Nahuatl: {{t|nci|pōhua}}
