/* Translations */ <United States of America#61471482>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -131,7 +131,7 @@
 * Laz: {{t-needed|lzz}}
 * Lezgi: {{t|lez|Америкадин Садхьанвай Штатар|p}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|JAV}}, {{t+|lt|Amerika|f}}
-* Macedonian: {{t+|mk|Соеди́нети Амери́кански Држа́ви|f-p}}, {{t+|mk|САД|f-p}}, {{t+|mk|Америка|f}}
+* Macedonian: {{t+|mk|Соеди́нети Амери́кански Др́жави|f-p}}, {{t+|mk|САД|f-p}}, {{t+|mk|Америка|f}}
 * Malay: {{t+|ms|Amerika Syarikat}}, {{t|ms|AS}}, {{t|ms|Amerika}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ}}
 * Maltese: {{t|mt|Stati Uniti ta' l-Amerika}}, {{t|mt|l-Istati Uniti ta' l-Amerika}}, {{t|mt|Stati Uniti}}, {{t|mt|l-Istati Uniti}}, {{t+|mt|USA}}, {{t|mt|Amerika|f|alt=L-Amerika}}
