/* Translations */ added cherokee translation <cost#61480266>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -220,6 +220,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * Bulgarian: {{t+|bg|разноски}}, {{t+|bg|сто́йност|f}}, {{t+|bg|разхо́д|m}}
 * Catalan: {{t+|ca|cost|m}}, {{t+|ca|despesa|f}}
 * Chamicuro: {{t|ccc|iso'no}}
+* Cherokee: {{t|chr|ᏧᎬᏩᎶᏗ}}
 * Chinese:
 *: Mandarin: {{t+|cmn|費用|sc=Hani}}, {{t+|cmn|费用|tr=fèiyòng|sc=Hani}}, {{t+|cmn|成本|tr=chéngběn|sc=Hani}}, {{t+|cmn|花費|sc=Hani}}, {{t+|cmn|花费|tr=huāfèi|sc=Hani}}
 * Czech: {{t+|cs|náklad|m}}
