--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -58,6 +58,7 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 ====Translations====
 {{trans-top|outer garment covering the upper torso and arms}}
 * Albanian: {{t+|sq|pallto|f}}
+* Alutiiq: {{t|ems|paltuuk}}
 * Arabic: {{t+|ar|مِعْطَف|m}}
 * Armenian: {{t+|hy|վերարկու|sc=Armn}}, {{t+|hy|պալտո}}
 * Azerbaijani: {{t+|az|palto}}
@@ -95,8 +96,8 @@ Cognate with {{cog|goh|kozza}}, {{m|goh|kozzo||woolen coat}} ({{cog|de|Kotze||co
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
-{{trans-mid}}
 * Latin: {{t|la|laena|f}}
+{{trans-mid}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Lithuanian: {{t|lt|paltas|m}}
 * Luhya: {{t|luy|kumuchosi}}
