--- a/en/愶/愶.15689.wikitext
+++ b/en/愶/愶.15689.wikitext
@@ -10,7 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=恊}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -28,7 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[timid]]
 
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
