--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -32,17 +32,17 @@ From {{der|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 # To [[calculate]] or [[estimate]] a price.
 #: {{ux|en|I'd '''cost''' the repair work at a few thousand.}}
 
-=====Usage notes=====
+====Usage notes====
 The past tense and past participle is ''cost'' in the sense of "this computer '''cost''' me £600", but ''costed'' in the sense of 'calculated', "the project was '''costed''' at $1 million."
 
-=====Derived terms=====
+====Derived terms====
 {{der4|en
 |cost an arm and a leg
 |cost a pretty penny
 |cost the earth
 |how much does it cost}}
 
-=====Translations=====
+====Translations====
 {{trans-top|to incur a charge, a price}}
 * Abkhaz: {{t-needed|ab}}
 * Arabic: {{t|ar|سَاوَى}}, {{t+|ar|كَلَّفَ}}
@@ -158,7 +158,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 #: {{ux|en|Spending all your time working may earn you a lot of money at the '''cost''' of your health.}}
 #: {{ux|en|The army won the battle decisively, but at a '''cost''' of many lives.}}
 
-=====Hyponyms=====
+====Hyponyms====
 {{col4|en|appraisal cost
 |carbon cost
 |flotation cost
@@ -172,7 +172,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 |variable cost
 }}
 
-=====Derived terms=====
+====Derived terms====
 {{der3|en
 |cost-benefit
 |[[cost-cutting]], [[cost cutting]]
@@ -187,7 +187,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 |low-cost
 }}
 
-=====Related terms=====
+====Related terms====
 {{rel4|en|at cost
 |cost and freight
 |cost avoidance
@@ -209,7 +209,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 |design to cost
 }}
 
-=====Translations=====
+====Translations====
 {{trans-top|amount of money spent for a purpose}}
 * Arabic: {{t|ar|تَكْلِفَة|f}}, {{t|ar|كُلْفَة|f}}
 * Armenian: {{t+|hy|ծախս|sc=Armn}}
@@ -326,11 +326,11 @@ Cognate with {{cog|is|kostur}}, {{cog|de|-}} dialectal {{m|de|Kust||taste, flavo
 # {{lb|en|obsolete}} [[manner|Manner]]; [[way]]; [[means]]; available [[course]]; [[contrivance]].
 # [[quality|Quality]]; [[condition]]; [[property]]; [[value]]; [[worth]]; a [[wont]] or [[habit]]; [[disposition]]; [[nature]]; [[kind]]; [[characteristic]].
 
-=====Derived terms=====
+====Derived terms====
 * {{l|en|at all costs}}
 * {{l|en|needs-cost}}
 
-=====Related terms=====
+====Related terms====
 * {{l|en|costen}}
 * {{l|en|costning}}
 
