Noun was too deep <come#61530644>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -622,7 +622,7 @@ Cognate to {{cog|fr|comme}}. See also {{cog|es|como}}/{{m|es|cómo}} and {{cog|c
 ===Etymology 1===
 From {{inh|enm|ang|cyme}}, from {{inh|enm|gem-pro|*kumiz}}.
 
-=====Noun=====
+====Noun====
 {{enm-noun}}
 
 # [[arrival]], [[coming]]
@@ -640,7 +640,7 @@ From {{inh|enm|ang|cyme}}, from {{inh|enm|gem-pro|*kumiz}}.
 ===Etymology 2===
 From {{inh|enm|ang|cuma}}, from {{m|ang|cuman||to come}}.
 
-=====Noun=====
+====Noun====
 {{enm-noun}}
 
 # [[guest]], [[stranger]]
