--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -118,6 +118,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 *: Cyrillic: {{t|sh|плаво̀кос}}
 *: Roman: {{t+|sh|plavòkos}}
 * Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
+* Spanish: {{t+|es|rubio}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, {{t+|sv|blond}}
 * Tagalog: {{t|tl|rubyo}}
 * Thai: {{t-needed|th}}
