--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -646,7 +646,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 * Norwegian:
 *: Bokmål: {{t+|nb|bridge|m}}
 *: Nynorsk: {{t|nn|bridge|m}}
-* Polish: {{t+|pl|brydż|m}}
+* Polish: {{t+|pl|brydż|m}}, {{t+|pl|bridż|m}}
 * Portuguese: {{t+|pt|bridge|m}}
 * Romanian: {{t+|ro|bridge}}
 * Russian: {{t+|ru|бридж|m}}
