/* Chinese */ added Glyph origin section <偨#61547700>

--- a/en/偨/偨.11128.wikitext
+++ b/en/偨/偨.11128.wikitext
@@ -14,10 +14,15 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han etym|祡}}
+{{attention|zh|needs ltc, otc entries created}}
 ===Pronunciation===
 {{zh-pron
 |m=cī
 |c=ci1,zi1
+|mc=y
+|oc=y
 |cat=
 }}
 
