--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -2,7 +2,7 @@
 [[Image:Aldabra.giant.tortoise.arp.jpg|thumb|A tortoise]]
 
 ===Etymology===
-From {{inh|en|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{der|en|ML.|tortuca}}, of uncertain origin. May be from {{der|en|LL.|tartarūcha}}, from {{m|LL.|tartarūchus}}, from {{der|en|grc|ταρταροῦχος||holder of Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld and they were commonly paired with such infernal beasts; or from {{der|en|la|tortus||twisted}}.
+From {{inh|en|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{der|en|ML.|tortuca}}, of uncertain origin. May be from {{der|en|LL.|tartarūcha}}, from {{m|LL.|tartarūchus}}, from {{der|en|grc|ταρταροῦχος||holder of Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld and they were commonly paired with such infernal beasts; or from {{der|en|la|tortus||twisted}}. Displaced native {{noncog|ang|byrdling}}.
 
 ===Pronunciation===
 * {{a|GA}} {{IPA|en|/ˈtɔːɹ.təs/}}
