--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -20,7 +20,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 ===Proper noun===
 {{en-proper noun|Frances}}
 
-# {{senseid|en|Q142}}{{place|en|country|in western|cont/Europe|{{,}} Member state of the [[European Union]] (since 1993), having <<capital/Paris>> as its capital city, bounded by <<c/Belgium>>, <<c/Luxembourg>>, <<c/Germany>>, <<c/Switzerland>>, <<c/Italy>>, <<c/Monaco>>, <<c/Andorra>> and <<c/Spain>>|official=French Republic}}
+# {{senseid|en|Q142}}{{place|en|country|in western|cont/Europe|{{,}} Member state of the [[European Union]] (since 1993), having <<capital/Paris>> as its capital city, bounded by Belgium, Luxembourg, Germany, Switzerland, Italy, Monaco, Andorra and Spain|official=French Republic}}
 #* {{quote-book|en|year=1837| year_published= 1977 |page=237|title= {{w|Mauprat}} |author= {{w|George Sand}}|trans=Stanley Young|publisher=Cassandra Editions|url= https://books.google.co.nz/books?id=NTTeAwAAQBAJ |isbn= 9780897338677 |passage= For a long time the dormouse and polecat had seemed to him overfeeble enemies for his restless valour, even as the granary floor seemed to afford too narrow a field. Every day he read the papers of the previous day in the servants' hall of the houses he visited, and it appeared to him that this war in America, which was hailed as the awakening of the spirit of liberty and justice in the New World, ought to produce a revolution in '''France'''.}}
 #* {{quote-book|en|year=1998|author=Shanny Peer|title=France on Display: Peasants, Provincials, and Folklore|isbn=0791437108|page=2|passage=Although scholars have offered different chronologies and causalities for the move toward modernity, most have resolved the paradox of the two '''Frances''' by placing them in sequence: "diverse '''France''' gave way over time as modern centralized '''France''' gathered force."}}
 #* {{quote-journal
