--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -28,8 +28,8 @@
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Albanian: {{t|sq|Çeke|f}}, {{t+|sq|Republika Çeke|f}}
 * Amharic: {{t|am|ቼክ|sc=Ethi}}
-* Arabic: {{t|ar|جُمْهُورِيَّةْ اَلتّْشِيك|f}}, {{t|ar|اَلتّْشِيك|f}}
-*: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk|sc=Arab}}
+* Arabic: {{t|ar|جُمْهُورِيَّة التْشِيك|f}}, {{t|ar|التْشِيك|f}}
+*: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն}}, {{t|hy|Չեխիա}}
 * Asturian: {{t+|ast|Chequia|f}}
 * Azerbaijani: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
@@ -37,14 +37,14 @@
 * Basque: {{t|eu|Txekiako Errepublika}}
 * Bavarian: {{t|bar|Tschechische Republik|f}}, {{t|bar|Tschechei|f}}
 * Belarusian: {{t|be|Чэ́шская Рэспу́бліка|f}}, {{t|be|Чэ́хія|f}}, {{t|be|Чэ́ская Рэспу́бліка|f}} {{q|Taraškievica}}, {{t|be|ЧР|f}}
-* Bengali: {{t+|bn|চেক প্রজাতন্ত্র|sc=Beng}}
+* Bengali: {{t+|bn|চেক প্রজাতন্ত্র}}
 * Breton: {{t|br|Republik Tchek}}, {{t+|br|Tchekia}}
 * Bulgarian: {{t|bg|Че́шка репу́блика|f}}, {{t+|bg|Че́хия|f}}, {{t|bg|ЧР|f}}
-* Burmese: {{t|my|ချက်သမ္မတ|sc=Mymr}}, {{t+|my|ချက်|sc=Mymr}}
+* Burmese: {{t|my|ချက်သမ္မတ}}, {{t+|my|ချက်}}
 * Catalan: {{t|ca|República Txeca|f}}, {{t+|ca|Txèquia|f}}
 * Chechen: {{t|ce|Чехи}}
 * Chinese:
-*: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t+|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
+*: Mandarin: {{t+|cmn|捷克共和國}}, {{t+|cmn|捷克共和国|tr=Jiékè gònghéguó}}, {{t+|cmn|捷克|tr=Jiékè}}
 * Chuvash: {{t|cv|Чех Республики|sc=Cyrl}}
 * Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}, {{t|crh|Çehiya}}
 * Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}, {{t+|cs|ČR|f}}
@@ -65,7 +65,7 @@
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hausa: {{t|ha|Jamhuriyar Cak}}
-* Hebrew: {{t|he|צֶ׳כְיָה|f|tr=Chekhia|sc=Hebr}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-Repubeliqah ha-Cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
+* Hebrew: {{t|he|צֶ׳כְיָה|f|tr=chekhia}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-repubeliqah ha-cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
 * Hindi: {{t+|hi|चेक गणराज्य|m}}, {{t+|hi|चेक}}, {{t|hi|चेक रिपब्लिक}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
@@ -97,7 +97,8 @@
 * Malayalam: {{t|ml|ചെക്ക്‌|sc=Mlym}}
 * Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}, {{t|mt|Ċekja|f}}
 * Marathi: {{t|mr|चेक}}
-* Mongolian: {{t|mn|Бүгд Найрамдах Чех Улс|sc=Cyrl}}, {{t|mn|Чех улс|sc=Cyrl}}
+* Mongolian:
+*: Cyrillic: {{t|mn|Бүгд Найрамдах Чех Улс}}, {{t|mn|Чех улс}}
 * Navajo: {{t|nv|Chek bikéyah}}
 * Norman: {{t|nrf|Républyique Tchèque|f}} {{qualifier|Jersey}}
 * Northern Sami: {{t|se|Čeahkka}}
@@ -108,7 +109,7 @@
 * Oriya: {{t|or|ଚେକ୍ ଗଣରାଜ୍ୟ}}
 * Ossetian: {{t|os|Чехи|sc=Cyrl}}
 * Pashto: {{t|ps|چک جمهوریت|m|tr=ček ǰamhuryát}}
-* Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}, {{t+|fa|چک|tr=ček|sc=fa-Arab}}
+* Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček}}, {{t+|fa|چک|tr=ček}}
 * Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
 * Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|Chéquia|f}}, {{t+|pt|Tchéquia|f}}
 * Punjabi: {{t|pa|ਚੈੱਕ ਗਣਰਾਜ}}
@@ -116,7 +117,7 @@
 * Romanian: {{t+|ro|Republica Cehă|f}}, {{t+|ro|Cehia|f}}
 * Romansch: {{t|rm|Republica Tscheca|f}}, {{t|rm|Tschechia|f}}
 * Russian: {{t+|ru|Че́шская Респу́блика|f}}, {{t+|ru|Че́хия|f}}, {{t+|ru|ЧР|f}}
-* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}, {{t|rue|Че́ська Репу́блика|f}} {{qualifier|Pannonian}}, {{t|rue|Че́хія|f}}
+* Rusyn: {{t|rue|Че́сько|n}}, {{t|rue|Че́ська Репу́блика|f}} {{qualifier|Pannonian}}, {{t|rue|Че́хія|f}}
 * Scottish Gaelic: {{t|gd|Seic|alt=an t-Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Че̏шка̄ Репу̀блика|f}}, {{t|sh|Че̏шка̄|f}}
@@ -133,9 +134,9 @@
 * Swahili: {{t|sw|Jamhuri ya Ucheki}}, {{t|sw|Ucheki}}
 * Swedish: {{t|sv|Tjeckiska republiken|c}}, {{t+|sv|Tjeckien|n}}
 * Tagalog: {{t+|tl|Republikang Tseko}}
-* Tajik: {{t|tg|Чех Ҷумҳурии|sc=Cyrl}}, {{t|tg|Чехия|sc=Cyrl}}
+* Tajik: {{t|tg|Чех Ҷумҳурии}}, {{t|tg|Чехия}}
 * Tamil: {{t|ta|செக்|sc=Taml}}
-* Tatar: {{t|tt|Чехия Җөмһүрият|sc=Cyrl}}, {{t|tt|Чехия|sc=Cyrl}}
+* Tatar: {{t|tt|Чехия Җөмһүрият}}, {{t|tt|Чехия}}
 * Telugu: {{t|te|చెక్|sc=Telu}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก}}
 * Tibetan: {{t|bo|ཅེ་ཁེ།|sc=Tibt}}
