--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -64,7 +64,7 @@
 * Cebuano: {{t|ceb|Estados Unidos sa Amerika}}, {{t|ceb|Tinipong Bansa sa Amerika}}
 * Central Atlas Tamazight: {{t|tzm|ⵜⵉⵎⴰⵥⵍⴰⵢⵉⵏ ⵉⵎⵓⵏⴻⵏ ⵏ ⴰⵎⵉⵔⵉⴽⴰ}}
 * Chechen: {{t|ce|Американ Цхьанакхетта Штаташ}}, {{t|ce|Америка}}
-* Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ}}
+* Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ}}, {{t|chr|ᎠᎹᏰᏟ}}
 * Chinese:
 *: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t|yue|美國|sc=Hani}}, {{t|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t+|yue|美|tr=mei5|sc=Hani}}
 *: Dungan: {{t|dng|Мыйгуй}}, {{t|dng|Мыйгуә}}
