--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -111,7 +111,7 @@ From {{der|en|la|curvus|t=bent, curved}}. {{doublet|en|curb}}.
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Kurve|f}}
 * Greek: {{t-needed|el}}
-* Hebrew: {{t-needed|he}}
+* Hebrew: {{t+|he|עקומה|f|tr=akumá}}
 * Hungarian: {{t-needed|hu}}
 * Irish: {{t|ga|cuar|m}}
 * Italian: {{t+|it|curva|f}}
