--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -31,7 +31,7 @@
 ===Definitions===
 {{head|zh|Han character}}
 
-# {{†}} [[mold]]
+# {{zh-no-solo}} [[mold]]
 # [[model]]; [[type]]; [[style]]; [[pattern]]
 # {{lb|zh|Cantonese}} [[stylish]], [[cool]]
 
