--- a/en/偛/偛.11115.wikitext
+++ b/en/偛/偛.11115.wikitext
@@ -52,7 +52,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=そう,さふ|kun=わるがしこい}}
+* {{ja-readings|on=そう<さふ|kun=わるがしこい}}
 
 ----
 
