--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -339,6 +339,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Low German:
 *: German Low German: {{t|nds-de|snieden}}
 * Maori: {{t|mi|whakaiho}} {{qualifier|of hair}}, {{t|mi|tarotaro}} {{qualifier|of hair}}
+* Occitan: {{t+|oc|talhar}}
 * Polish: {{t+|pl|kroić|impf}}
 * Portuguese: {{t+|pt|cortar}}
 * Quechua: {{t|qu|kuchuy}}, {{t|qu|p'itiy}}
