--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -27,7 +27,7 @@
 * Abkhaz: {{t|ab|Чехиа|sc=Cyrl}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Albanian: {{t|sq|Çeke|f}}, {{t+|sq|Republika Çeke|f}}
-* Amharic: {{t|am|ቼክ|sc=Ethi}}
+* Amharic: {{t|am|ቼክ|sc=Ethi}}, {{t|am|ቼክ ረፑብሊክ}}
 * Arabic: {{t|ar|جُمْهُورِيَّة التْشِيك|f}}, {{t|ar|التْشِيك|f}}
 *: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն}}, {{t|hy|Չեխիա}}
@@ -140,7 +140,7 @@
 * Telugu: {{t|te|చెక్|sc=Telu}}
 * Thai: {{t+|th|สาธารณรัฐเช็ก}}
 * Tibetan: {{t|bo|ཅེ་ཁེ།|sc=Tibt}}
-* Tigrinya: {{t|ti|ሪፓብሊክ ቸክ}}
+* Tigrinya: {{t|ti|ሪፓብሊክ ቸክ}}, {{t|ti|ቼክ ሪፓብሊክ}}
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}, {{t+|tr|Çekya}}
 * Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
 * Udmurt: {{t|udm|Чехия|sc=Cyrl}}
