t+yka:[[uta']] t-balance ([[WT:EDIT|Assisted]]) <vomit#61594679>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -201,9 +201,9 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Kazakh: {{t|kk|лоқсу}}
 * Khmer: {{t|km|កំអួត|tr=kɑm’uət}}
 * Korean: {{t-needed|ko}}
-{{trans-mid}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|ڕشانەوە}}
+{{trans-mid}}
 * Latin: {{t|la|vomitus|m}}
 * Latvian: {{t|lv|vēmekļi|m-p}}
 * Lithuanian: {{t|lt|vėmalai|p}}
@@ -230,6 +230,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Ukrainian: {{t+|uk|блюво́та|f}}, {{t+|uk|блювоти́ння|n}}
 * Urdu: {{t|ur|الٹی}}
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
+* Yakan: {{t|yka|uta'}}
 * Zazaki: {{t|zza|vırte}}
 {{trans-bottom}}
 
