--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -214,6 +214,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Norwegian: {{t+|no|oppkast|n}}, {{t+|no|spy|n}}
 * Occitan: {{t|oc|vòmit|m}}
 * Old English: {{t|ang|spiweþa|m}}
+* Piedmontese: {{t|pms|vòmit|m}}
 * Plautdietsch: {{t|pdt|Kolkj|n}}
 * Polish: {{t+|pl|wymiociny|p}}
 * Portuguese: {{t+|pt|vômito|m}}
