--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -37,4 +37,4 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[たん]] (tan), [[だ]] (da)|kun=[[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)}}
+* {{ja-readings|on=たん,だ|kun=そろってすすむ,ととのったさま}}
