--- a/en/偢/偢.11122.wikitext
+++ b/en/偢/偢.11122.wikitext
@@ -62,7 +62,7 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[せう]] (seu)|kun=[[いつくしまない]] (itsukushimanai), [[うれへるさま]] (ureherusama)}}
+* {{ja-readings|on=せう|kun=いつくしまない,うれへるさま}}
 
 ----
 
