--- a/en/偭/偭.11133.wikitext
+++ b/en/偭/偭.11133.wikitext
@@ -41,7 +41,7 @@
 # [[transgress]]
 
 ====Readings====
-* {{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[むかう]] (mukau), [[そむく]] (somuku), [[かなう]] (kanau)}}
+* {{ja-readings|on=べん,めん|kun=むかう,そむく,かなう}}
 
 ----
 
