/* Pronunciation */Added IPA <stab#61597514>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -250,6 +250,7 @@ From {{der|da|de|Stab}}.
 From {{der|sv|de|Stab}}.<ref>{{R:runeberg.org|svetym|0943.html stab}}</ref>
 
 ===Pronunciation===
+* {{IPA|sv|/stɑːb/}}
 * {{audio|sv|Sv-en stab.ogg|audio}}
 
 ===Noun===
