--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -361,7 +361,7 @@ From {{inh|en|enm|saffron}}, from {{der|en|fro|safran}}, from {{der|en|ML.|safrÄ
 * {{l|en|kumkum}}
 * {{l|en|colchicum}}
 * {{l|en|crocus bag}}
-* {{l|en|Saffron}}
+* {{l|en|crocus sack}}
 * {{l|en|turmeric}}
 * {{l|en|Appendix:Colors}}
 
