--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -174,7 +174,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free}}, from {{der|fr|i
 ==Galician==
 
 ===Etymology===
-From Old Galician and {{inh|gl|roa-opt|libre}}, {{m|roa-opt|livre}} (13th century, {{w|Cantigas de Santa Maria}}), from {{inh|gl|la|līber}}.
+From Old Galician and {{inh|gl|roa-opt|libre}}, {{m|roa-opt|livre}} (13th century, ''{{w|Cantigas de Santa Maria}}''), from {{inh|gl|la|līber}}.
 
 ===Pronunciation===
 * {{IPA|gl|[ˈliβɾɪ]}}
