--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -2,7 +2,7 @@
 ==English==
 {{wikipedia}}
 
-===Etymology===
+===Etymology 1===
 First attested in Scottish English (compare {{cog|sco|stob}}, {{m|sco|stobbe}}, {{m|sco|stabb||a pointed stick or stake; a thrust with a pointed weapon}}), from {{der|en|enm|stabbe||a stab}}, probably a variant of {{der|en|enm|stob}}, {{m|enm|stub}}, {{m|enm|stubbe||pointed stick, stake, thorn, stub, stump}}, from {{der|en|non|stobbi}}, {{m|non|stubbi}}, cognate with {{cog|ang|stybb}}. Cognate with {{cog|dum|stobbe}}.
 
 Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to thrust}}; supposed by others to be from a {{der|en|sco|-}} word.
@@ -208,6 +208,15 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 ===References===
 * {{R:Century 1911}}
 * {{R:OneLook}}
+
+===Etymology 2===
+{{clipping|en|stabilizer}} or {{m|en|stabiliser}}.
+
+===Noun===
+{{en-noun}}
+
+# {{lb|en|aviation}} The horizontal or vertical [[stabilizer]] of an aircraft.
+#: {{quote-web|en|year=2020|author=Chris Brady|title=737 MAX - MCAS|work=The Boeing 737 Technical Site|url=http://www.b737.org.uk/mcas.htm|archiveurl=https://web.archive.org/web/20210123014020/http://www.b737.org.uk/mcas.htm|archivedate=23 January 2021|text=If the pilots used electric pitch trim, it would only pause MCAS for 5s; to deactivate it you have to switch off the '''STAB''' TRIM CUTOUT switches.}}
 
 ===Anagrams===
 * {{anagrams|en|a=abst|ABTs|ATBs|ATSB|Bast|Bats|SATB|TBAs|TBSA|Tabs|bast|bats|tabs}}
