--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -146,7 +146,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 {{trans-mid}}
 * Laboya: {{t|lmy|jorro}}
-* Ladino: {{t|lad|ermozo}}
+* Ladino: {{t|lad|ermozo|m}}, {{t|lad|ermoza|f}}
 * Lao: {{t|lo|ງາມ}}, {{t|lo|ງ້ອມ}}, {{t|lo|ຈຸບຸ}}, {{t|lo|ຊະແລບ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
