--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -122,7 +122,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 *: Alemannic German: {{t|gsw|schiebe}}
 * Greek: {{t+|el|σπρώχνω|sc=Grek}}
 *: Ancient: {{t|grc|ὠθέω}}
-* Hebrew: {{t-needed|he}}
+* Hebrew: {{t+|he|דחף|tr=dakháf}}
 * Hindi: {{t+|hi|धकेलना}}
 * Hungarian: {{t+|hu|tol}}, {{t|hu|megtol}}, {{t+|hu|lök}}
 * Icelandic: {{t|is|hrinda}}, {{t+|is|ýta}}
