t+he:[[משך]] ([[WT:EDIT|Assisted]]) <pull#61659567>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -180,7 +180,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 * Gothic: {{t|got|𐍄𐌹𐌿𐌷𐌰𐌽}}
 * Greek: {{t+|el|τραβώ}}
 *: Ancient: {{t|grc|ἕλκω}}
-* Hebrew: {{t-needed|he}}
+* Hebrew: {{t+|he|משך|m|tr=mashákh}}
 * Hindi: {{t|hi|खींचना}}
 * Hungarian: {{t+|hu|húz}}
 * Icelandic: {{t+|is|draga}}, {{t+|is|toga}}
