t+liv:[[mag]] ([[WT:EDIT|Assisted]]) <stomach#61660158>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -178,6 +178,7 @@ Displaced native {{m+|enm|bouk}}, {{m|enm|buc|t=belly, stomach}} from {{m+|ang|b
 * Latvian: {{t|lv|kuņģis|m}}
 * Ligurian: {{t|lij|stéumago|m}}
 * Lithuanian: {{t+|lt|skrandis|m}}
+* Livonian: {{t|liv|mag}}
 * Lotud: {{t|dtr|tian}}
 * Low German: {{t|nds|Maag|m}}
 * Luganda: {{t-needed|lg}}
