t+az:[[vuruşmaq]] t+az:[[çarpışmaq]] t+az:[[dalaşmaq]] t+az:[[döyüşmək]] t+az:[[dalaşma]] t+az:[[dava]] t-balance ([[WT:EDIT|Assisted]]) <fight#61660382>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -82,7 +82,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 * Armenian: {{t+|hy|կռվել}}
 * Aromanian: {{t|rup|alumtu}}
 * Assamese: {{t|as|যুঁজা}}
-* Azerbaijani: {{t+|az|döyüşmək}}
+* Azerbaijani: {{t+|az|döyüşmək}}, {{t+|az|vuruşmaq}}, {{t+|az|çarpışmaq}}, {{t|az|dalaşmaq}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
 * Belarusian: {{t|be|бі́цца|impf|sc=Cyrl}}, {{t|be|змага́цца|impf|sc=Cyrl}}, {{t|be|ваява́ць|impf|sc=Cyrl}}, {{t|be|баро́цца|impf}}
 * Bulgarian: {{t+|bg|боря|impf|alt=боря́ се}}, {{t+|bg|бия|impf|alt=би́я се|sc=Cyrl}}
@@ -190,7 +190,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 {{trans-top|(reciprocal) to contend in physical conflict with each other}}
 * Arabic: {{t|ar|تَعَارَكَ}}, {{t|ar|تَقَاتَلَ}}, {{t|ar|اِعْتَرَكَ}}, {{t|ar|اِقْتَتَلَ}}
 *: Egyptian Arabic: {{t|arz|اتخانق|tr=etḵāneʾ}}
-* Azerbaijani: {{t|az|dalaşmaq}}
+* Azerbaijani: {{t|az|dalaşmaq}}, {{t+|az|vuruşmaq}}, {{t+|az|çarpışmaq}}
 {{trans-mid}}
 * Chickasaw: {{t|cic|ittafama}}
 * Greek: {{t+|el|τσακώνομαι}}, {{t+|el|μαλώνω}}
@@ -198,6 +198,7 @@ Cognate with {{cog|sco|fecht||to fight}}, {{cog|fy|fjochtsje}}, {{m|fy|fjuchte||
 {{trans-bottom}}
 
 {{trans-top|to strive for}}
+* Azerbaijani: {{t+|az|döyüşmək}}, {{t+|az|vuruşmaq}}, {{t+|az|çarpışmaq}}
 * Basque: {{t|eu|borrokatu}}, {{t|eu|borroka egin}}
 * Czech: {{t+|cs|bojovat}}
 * Dutch: {{t+|nl|opkomen}} {{t+|nl|voor}}, {{t+|nl|ijveren}} voor
@@ -388,6 +389,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Ancient Greek: {{t|grc|μάχη|f}}
 * Armenian: {{t+|hy|կռիվ}}
 * Aromanian: {{t|rup|alumtã|f}}, {{t|rup|ljuftã|f}}, {{t|rup|lumtã}}
+* Azerbaijani: {{t|az|dalaşma}}, {{t+|az|dava}}
 * Basque: {{t|eu|borroka}}, {{t|eu|borrokaldi}}
 * Belarusian: {{t|be|бо́йка|f|sc=Cyrl}}, {{t|be|бой|m|sc=Cyrl}}, {{t|be|суты́чка|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|бой|m|sc=Cyrl}}, {{t+|bg|сраже́ние|n|sc=Cyrl}}
@@ -411,8 +413,8 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Korean: {{t+|ko|싸움}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|شەڕ}}
-* Latin: {{t+|la|pugna}}
 {{trans-mid}}
+* Latin: {{t+|la|pugna}}
 * Latvian: {{t|lv|cīņa|f}}, {{t|lv|kauja|f}}
 * Lithuanian: {{t+|lt|kova|f}}, {{t|lt|muštynės|p}}, {{t|lt|grumtynės|p}}
 * Macedonian: {{t|mk|бој|m|sc=Cyrl}}
@@ -502,6 +504,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 {{trans-bottom}}
 
 {{trans-top|physical confrontation}}
+* Azerbaijani: {{t+|az|dava}}
 * Bulgarian: {{t+|bg|бой|m|sc=Cyrl}}
 * Catalan: {{t+|ca|baralla|f}}, {{t+|ca|batussa|f}}
 * Czech: {{t+|cs|rvačka|f}}
