t+az:[[davakarlıq]] ([[WT:EDIT|Assisted]]) <fight#61660386>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -591,6 +591,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 {{trans-bottom}}
 
 {{trans-top|will or ability to fight}}
+* Azerbaijani: {{t|az|davakarlıq}}
 * Czech: {{t|cs|bojovnost|f}}
 * Dutch: {{t+|nl|vechtlust|m}}
 * Finnish: {{t+|fi|taistelutahto}}
