--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -301,6 +301,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Old East Slavic: {{t|orv|мостъ|m}}
 * Old English: {{t|ang|brycg|f}}
 * Oriya: {{t+|or|ପୋଲ}}
+* Oromo: {{t|om|riqicha}}
 * Ossetian: {{t|os|хид}}
 * Pashto: {{t+|ps|پل|tr=pul}}
 * Pennsylvania German: {{t|pdc|Brick|f}}
