t+pcd:[[Alemanne]] ([[WT:EDIT|Assisted]]) <Germany#61674101>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -252,6 +252,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Pashto: {{t|ps|آلمان|m|tr=ālmãn}}, {{t+|ps|المان|m|tr=almãn}}
 * Pennsylvania German: {{t|pdc|Deitschland|n}}
 * Persian: {{t+|fa|آلمان|tr=âlmân}}
+* Picard: {{t|pcd|Alemanne|f}}
 * Pitcairn-Norfolk: {{t|pih|Doichland}}
 * Plautdietsch: {{t+|pdt|Dietschlaund|n}}, {{t+|pdt|Dietschlaunt|n}}
 * Polish: {{t+|pl|Niemcy|f-p}}
