--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[File:Olea_europaea1.jpg|thumb|a typical '''olive''' tree (''[[Olea europaea]]'') (1)]]
 
 ===Etymology===
-From {{inh|en|enm|olyve}}, borrowed from {{bor|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref> Displaced native {{ncog|ang|eleberġe}}, literally "oil berry."
+From {{inh|en|enm|olyve}}, from {{der|en|fro|olive||olive, olive tree}}, from {{der|en|la|olīva||olive}}, from {{der|en|ett|𐌄𐌋𐌄𐌉𐌅𐌀}} or Proto-Greek {{m|grc|*ἐλαίϝα}}, ultimately from {{der|en|ine-pro|*loiwom}} (compare {{cog|cu|лои||tallow}}, {{cog|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref> Displaced native {{ncog|ang|eleberġe}}, literally "oil berry."
 
 ===Pronunciation===
 * {{a|UK}} {{enPR|ŏl'ĭv}}, {{IPA|en|/ˈɒlɪv/}}
