--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -60,15 +60,15 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 #*: He hath turned aside my ways, and '''pulled''' me in pieces; he hath made me desolate.
 # {{lb|en|transitive}} To [[strain]] (a [[muscle]], [[tendon]], [[ligament]], etc.).
 # {{lb|en|video games|ambitransitive}} To draw (a hostile [[non-player character]]) into combat, or toward or away from some location or target.
-#* '''2003''' April 9, "Richard Lawson" (username), "[http://groups.google.com/group/alt.games.everquest/msg/ef966301acc57674 Monual's Willful Ignorance]", in <tt>alt.games.everquest</tt>, Usenet:
+#* '''2003''' April 9, "Richard Lawson" (username), "[http://groups.google.com/group/alt.games.everquest/msg/ef966301acc57674 Monual's Willful Ignorance]", in {{monospace|alt.games.everquest}}, Usenet:
 #*: …we had to clear a long hallway, run up half way, '''pull''' the boss mob to us, and engage.
-#* '''2004''' October 18, "Stush" (username), "[http://groups.google.com/group/alt.games.dark-age-of-camelot/msg/15cb6d42a08013c0 Re: focus pull]", in <tt>alt.games.dark-age-of-camelot</tt>, Usenet:
+#* '''2004''' October 18, "Stush" (username), "[http://groups.google.com/group/alt.games.dark-age-of-camelot/msg/15cb6d42a08013c0 Re: focus pull]", in {{monospace|alt.games.dark-age-of-camelot}}, Usenet:
 #*: Basically buff pet, have it '''pull''' lots of mobs, shield pet, chain heal pet, have your aoe casters finish off hurt mobs once pet gets good aggro.
-#* '''2005''' August 2, "Brian" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/1806eabe4cf56d24 Re: How to tank Stratholme undead pulls?]", in <tt>alt.games.warcraft</tt>, Usenet:
+#* '''2005''' August 2, "Brian" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/1806eabe4cf56d24 Re: How to tank Stratholme undead pulls?]", in {{monospace|alt.games.warcraft}}, Usenet:
 #*: This is the only thing that should get you to break off from your position, is to '''pull''' something off the healer.
-#* '''2007''' April 10, "John Salerno" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/d17abeaedce0ebc0 Re: Managing the Command Buttons]", in <tt>alt.games.warcraft</tt>, Usenet:
+#* '''2007''' April 10, "John Salerno" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/d17abeaedce0ebc0 Re: Managing the Command Buttons]", in {{monospace|alt.games.warcraft}}, Usenet:
 #*: You could also set a fire trap, '''pull''' the mob toward it, then send in your pet….
-#* '''2008''' August 18, "Mark (newsgroups)" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/72486e99a34604b5 Re: I'm a priest now!]", in <tt>alt.games.warcraft</tt>, Usenet:
+#* '''2008''' August 18, "Mark (newsgroups)" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/72486e99a34604b5 Re: I'm a priest now!]", in {{monospace|alt.games.warcraft}}, Usenet:
 #*: Shield yourself, '''pull''' with Mind Blast if you want, or merely '''pull''' with SW:P to save mana, then wand, fear if you need to, but use the lowest rank fear.
 # {{lb|en|UK}} To [[score]] a certain number of points in a sport.
 #: ''How many points did you '''pull''' today, Albert?''
