t+pt:[[amêixoa]] ([[WT:EDIT|Assisted]]) <plum#61689041>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -304,7 +304,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Persian: {{t+|fa|آلو|tr=âlu|sc=fa-Arab}}
 * Plautdietsch: {{t|pdt|Plum|f}}
 * Polish: {{t+|pl|śliwka|f}}
-* Portuguese: {{t+|pt|ameixa|f}}
+* Portuguese: {{t+|pt|ameixa|f}}, {{t+|pt|amêixoa}}
 * Romanian: {{t+|ro|prună|f}}
 * Romansch: {{t|rm|primbla|f}}, {{t|rm|prema|f}}, {{t|rm|prem|m}}, {{t|rm|zuesca|f}}, {{t|rm|zvetga|f}}, {{t|rm|paloja|f}}, {{t|rm|paloga|f}}, {{t|rm|prüna|f}}, {{t|rm|brümbla|f}}
 * Russian: {{t+|ru|сли́ва|f}}
