/* Derived terms */ <thunder#61689780>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -70,6 +70,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 |{{l|en|thunderstruck}}
 |{{l|en|thunderstone}}
 |{{l|en|thunderstorm}}
+|{{l|en|thunder-wheel}}
 |{{l|en|thundery}}
 }}
 
