--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -388,3 +388,15 @@ Borrowed from {{bor|cy|ang|hætt}}.
 
 ===Further reading===
 {{R:cy:GPC}}
+
+----
+
+==Yola==
+ 
+===Noun===
+{{head|yol|noun}}
+ 
+# [[heat]]
+
+===References===
+* {{R:Poole 1867}}
