--- a/en/偖/偖.11110.wikitext
+++ b/en/偖/偖.11110.wikitext
@@ -75,3 +75,12 @@
 
 ====Compounds====
 * {{vi-l|譯偖}}
+
+===Han character===
+==== verb ====
+{{vi-readings|rs=一01
+|hanviet=xả
+|nom=xả
+}}
+====Synonyms====
+* {{vi-l|撦}}
