--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -273,6 +273,7 @@ From {{inh|en|enm|France}}, borrowed from {{der|en|frm|France}}, from {{der|en|f
 <references/>
 
 [[Category:en:France]]
+[[Category:en:Individuals]]
 
 ----
 
