--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -265,6 +265,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Rusyn: {{t|rue|Нїме́цько|n}}
 * Samogitian: {{t|sgs|Vuokītėjė}}
 * Sanskrit: {{t|sa|शर्मण्यदेश|m}}, {{t+|sa|शार्मण्यदेश|m}}, {{t+|sa|शार्मण्य|m}}, {{t+|sa|शार्मण्यः|m}}
+* Sardinian: {{t|sc|Germània|f}}
 * Saterland Frisian: {{t|stq|Düütsklound|n}}
 * Scottish Gaelic: {{t|gd|Gearmailt|f}}
 * Serbo-Croatian:
