--- a/en/垌/垌.13071.wikitext
+++ b/en/垌/垌.13071.wikitext
@@ -85,6 +85,6 @@
 ===Han character===
 {{vi-readings|reading=đồng|rs=土06}}  
 
-Hán-Nôm meaning is the same as the Chinese reading. However, đồng in Vietnamese "Chữ Quốc Ngữ" means copper, coin, or currency. 
+Hán-Nôm meaning is the same as the Chinese reading. However, đồng in Latin Vietnamese "[https://en.m.wikipedia.org/wiki/Vietnamese_alphabet Chữ Quốc Ngữ]" means copper, coin, or currency instead.  
 
 # {{rfdef|vi|sort=土06}}
