--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -406,6 +406,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Korean: {{t+|ko|곧장}}, {{t+|ko|똑바로}}, {{t+|ko|죽}}
 {{trans-mid}}
 * Latvian: {{t|lv|taisni}}
+* Livonian: {{t|liv|kūoḑõn}}
 * Macedonian: {{t|mk|право}}
 * Neapolitan: {{t|nap|adderitto}}
 * Polish: {{t+|pl|prosto}}
