--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -401,6 +401,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 * Greek:
 *: Ancient: {{t|grc|εὐθύ}}
 * Hebrew: {{t+|he|יָשָׁר|tr=yashár}}
+* Hungarian: {{t+|hu|egyenesen}}
 * Italian: {{t+|it|direttamente}}
 * Japanese: {{t+|ja|真っ直ぐ|tr=まっすぐ, massugu}}
 * Korean: {{t+|ko|곧장}}, {{t+|ko|똑바로}}, {{t+|ko|죽}}
