t+hy:[[ուղիղ]] ([[WT:EDIT|Assisted]]) <straight#61747061>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -388,6 +388,7 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 {{trans-top|in a forward direction}}
 * Arabic: {{t|ar|عَلَى طُول}}
 *: Hijazi Arabic: {{t|acw|عَلَى طُول|tr=ʿala ṭūl|sc=Arab}}, {{t|acw|دُغْرِي|tr=duḡri|sc=Arab}} {{qualifier|obsolete}}
+* Armenian: {{t+|hy|ուղիղ }}
 * Belarusian: {{t|be|пра́ма}}, {{t|be|про́ста}}
 * Bulgarian: {{t+|bg|напра́во}}, {{t+|bg|пра́во}}
 * Chinese:
