--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -104,6 +104,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ====Derived terms====
 {{der4|en
 |becut
+|buzzcut
+|crosscut
 |[[cut and cover]], [[cut-and-cover]]
 |cut-away
 |cutthroat
