--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -117,6 +117,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Greek: {{t+|el|αισθάνομαι}}
 * Haitian Creole: {{t|ht|santi}}
 * Hungarian: {{t+|hu|érez}}, {{t+|hu|tapint}}
+* Icelandic: {{t+|is|snerta }}
 * Ido: {{t+|io|sentar}}
 * Irish: {{t|ga|airigh}}, {{t|ga|mothaigh}}
 *: Old Irish: {{t|sga|airigidir}}
