--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -108,7 +108,7 @@ From {{inh|en|enm|felen}}, from {{inh|en|ang|fēlan|t=to feel, perceive, touch}}
 * Danish: {{t+|da|føle}}, {{t|da|mærke}}
 * Dutch: {{t+|nl|voelen}}
 * Esperanto: {{t+|eo|palpi}}
-* Estonian: {{t+|et|tundma}}, {{t|et|tajuma}}
+* Estonian: {{t+|et|tundma}}
 * Finnish: {{t+|fi|tuntea}}
 * French: {{t+|fr|palper}}, {{t+|fr|toucher}}
 * Friulian: {{t|fur|sintî}}, {{t|fur|tastâ}}
