t+la:[[loquor]] ([[WT:EDIT|Assisted]]) <speak#61757109>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -374,6 +374,7 @@ From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, al
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
 * Khmer: {{t+|km|និយាយ|tr=ni’yiey|sc=Khmr}}
+* Latin: {{t+|la|loquor}}
 * Latvian: {{t+|lv|runāt}}
 * Lithuanian: {{t+|lt|kalbėti}}
 * Maore Comorian: {{t|swb|lagua|alt=ulagua}}
