--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -2,21 +2,21 @@
 ==English==
 {{wikipedia}}
 
-===Etymology 1===
-First attested in Scottish English (compare {{cog|sco|stob}}, {{m|sco|stobbe}}, {{m|sco|stabb||a pointed stick or stake; a thrust with a pointed weapon}}), from {{der|en|enm|stabbe||a stab}}, probably a variant of {{der|en|enm|stob}}, {{m|enm|stub}}, {{m|enm|stubbe||pointed stick, stake, thorn, stub, stump}}, from {{der|en|non|stobbi}}, {{m|non|stubbi}}, cognate with {{cog|ang|stybb}}. Cognate with {{cog|dum|stobbe}}.
-
-Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to thrust}}; supposed by others to be from a {{der|en|sco|-}} word.
-
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|en|/stæb/}}
 * {{audio|en|en-us-stab.ogg|Audio (US)}}
 * {{hyphenation|en|stab}}
 * {{rhymes|en|æb}}
 
-===Noun===
+===Etymology 1===
+First attested in Scottish English (compare {{cog|sco|stob}}, {{m|sco|stobbe}}, {{m|sco|stabb||a pointed stick or stake; a thrust with a pointed weapon}}), from {{der|en|enm|stabbe||a stab}}, probably a variant of {{der|en|enm|stob}}, {{m|enm|stub}}, {{m|enm|stubbe||pointed stick, stake, thorn, stub, stump}}, from {{der|en|non|stobbi}}, {{m|non|stubbi}}, cognate with {{cog|ang|stybb}}. Cognate with {{cog|dum|stobbe}}.
+
+Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to thrust}}; supposed by others to be from a {{der|en|sco|-}} word.
+
+====Noun====
 {{en-noun}}
 
-# An act of stabbing or [[thrust|thrusting]] with an object.
+# An act of stabbing or [[thrust]]ing with an object.
 # A wound made by stabbing.
 #* {{quote-book|1=en|year=1887|author=H. Rider Haggard|authorlink=H. Rider Haggard|title=She: A History of Adventure|url=http://www.gutenberg.org/files/3155/3155-0.txt|passage=I opened the man's linen robe, and there over his heart was a dagger-wound, and beneath the woman's fair breast was a like cruel '''stab''', through which her life had ebbed away.}}
 # Pain inflicted on a person's feelings.
@@ -27,7 +27,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 #: ''a horn '''stab'''''
 # A [[bacterial]] [[culture]] made by [[inoculate|inoculating]] a solid medium, such as gelatin, with the puncture of a needle or wire.
 
-====Derived terms====
+=====Derived terms=====
 {{der-top}}
 * {{l|en|have a stab at}}, {{l|en|take a stab at}}
 * {{l|en|stab in the back}}
@@ -38,7 +38,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * {{l|en|stabby}}
 {{der-bottom}}
 
-====Translations====
+=====Translations=====
 {{trans-top|act of stabbing}}
 * Assamese: {{t|as|খোঁচা}}, {{t|as|হেঁচা}}
 * Asturian: {{t+|ast|puñalada|f}}
@@ -109,12 +109,12 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Ukrainian: {{t|uk|критика|f}}
 {{trans-bottom}}
 
-===Verb===
+====Verb====
 [[File:Comic History of Rome p 308 The End of Julius Caesar.jpg|thumb|a man about to be stabbed]]
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[pierce]] or to [[wound]] (somebody) with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
-#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]| title=[[w:The Case of Miss Elliott|The Tremarn Case]]| chapter=1| url=http://openlibrary.org/works/OL8479084W| passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
+#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]| title=[[w:The Case of Miss Elliott|The Tremarn Case]]| chapter=1| url=http://openlibrary.org/works/OL8479084W| passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which {{...}} was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
 #: {{ux|en|If you '''stab''' him in the heart he won't live long enough to retaliate.}}
 # {{lb|en|transitive}} To [[thrust]] in a stabbing motion.
 #: {{ux|en|to '''stab''' a dagger into a person}}
@@ -129,11 +129,11 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 # {{lb|en|transitive}} To [[roughen]] a [[brick]] [[wall]] with a [[pick]] so as to hold [[plaster]].
 # {{lb|en|transitive}} To [[pierce]] folded [[sheet]]s, near their back edges, for the passage of [[thread]] or [[wire]].
 
-====Derived terms====
+=====Derived terms=====
 * {{l|en|stabbee}}
 * {{l|en|stabber}}
 
-====Translations====
+=====Translations=====
 {{trans-top|To pierce or wound with pointed object}}
 * Arabic: {{t|ar|طَعَنَ}}
 * Armenian: {{t+|hy|խոցել}}
@@ -205,14 +205,14 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 * Russian: {{t+|ru|ра́нить}}
 {{trans-bottom}}
 
-===References===
+====References====
 * {{R:Century 1911}}
 * {{R:OneLook}}
 
 ===Etymology 2===
 {{clipping|en|stabilizer}} or {{m|en|stabiliser}}.
 
-===Noun===
+====Noun====
 {{en-noun}}
 
 # {{lb|en|aviation|slang}} The horizontal or vertical [[stabilizer]] of an aircraft.
