--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -225,7 +225,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 
 # {{lb|en|industrial relations}} {{clipping of|en|established}}
 #* '''1893''', ''Proceedings of the Parliament of South Australia'' (page 313)
-#*: Do you know whether any country offices pay their men by the thouusand, or whether they are on stab wages? — I do not know. Some are paid '''stab''' wages, but I do not know whether there is much piece-work.
+#*: Do you know whether any country offices pay their men by the thousand, or whether they are on '''stab''' wages? — I do not know. Some are paid '''stab''' wages, but I do not know whether there is much piece-work.
 #* '''1967''', John Child, ''Industrial Relations in the British Printing Industry'' (page 113)
 #*: The pressmen were granted a '''stab''' wage of 36s for a 60 hour week, and the extras for overtime and Sunday work {{...}}
 
