Adding POS to [[Template:R:MED Online]] and cleaning up alt forms using [[Project:AWB|AWB]] <et cetera#61799614>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -82,7 +82,7 @@ Borrowed from {{bor|enm|la|et cetera}}.
 * {{desc|en|et cetera}}, {{l|en|etc.}}
 
 ====References====
-* {{R:MED Online|entry=et cetera|id=MED14576|accessdate=2018-10-26}}
+* {{R:MED Online|entry=et cetera|pos=Latin phr|id=MED14576|accessdate=2018-10-26}}
 
 ----
 
