--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -99,7 +99,7 @@ Contraction of {{zh-l|*若夥}} ({{zh-ref|Mei, 2015}}). Compare Fuzhou {{cog|cdo
 
 ====Pronunciation====
 {{zh-pron
-|md=nuâi
+|md=niŏh/nuâi
 |mn=xm,zz,twv:lōa/qz,jj,ph:lǒa/tw:gōa/twvk:jōa
 |cat=adv
 }}
