--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -1,4 +1,5 @@
 {{also|Mandat|mandát|mandât}}
+
 ==Catalan==
 
 ===Pronunciation===
@@ -10,6 +11,9 @@
 
 # [[mandate]]
 
+===Further reading===
+* {{R:IEC2}}
+
 ----
 
 ==French==
@@ -20,7 +24,7 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 ===Pronunciation===
 * {{fr-IPA}}
 * {{audio|fr|Fr-mandat.ogg|audio}}
-* {{hyphenation|fr|man|dat}}
+* {{hyph|fr|man|dat}}
 
 ===Noun===
 {{fr-noun|m}}
@@ -56,7 +60,19 @@ Borrowed from {{bor|fr|la|mandātum}}, from {{m|la|mandō||put in one's hands, c
 ===Verb===
 {{la-verb-form|mandat}}
 
-# {{inflection of|la|mandō||3|s|pres|actv|indc}}
+# {{inflection of|la|mandō||3|s|pres|actv|ind}}
+
+----
+
+==Malay==
+
+===Noun===
+{{ms-noun|j=مندت}}
+
+# {{rfdef|ms}}
+
+===Further reading===
+* {{R:PRPM}}
 
 ----
 
@@ -100,7 +116,7 @@ From {{bor|pl|de|Mandat}}, from {{der|pl|la|mandātum}}.
 
 ===Pronunciation===
 * {{IPA|sh|/mǎndaːt/}}
-* {{hyphenation|sh|man|dat}}
+* {{hyph|sh|man|dat}}
 
 ===Noun===
 {{sh-noun|g=m|head=màndāt}}
