t+mrw:[[Alimaniya]] t-balance ([[WT:EDIT|Assisted]]) <Germany#61817986>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -205,10 +205,10 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Limburgish: {{t|li|Duutsjlandj|?}}, {{t|li|Duutsland|?}}
 * Lingala: {{t|ln|Alémani}}
 * Lithuanian: {{t+|lt|Vokietija|f}}
-{{trans-mid}}
 * Livonian: {{t|liv|Saksāmō}}
 * Lombard: {{t|lmo|Germania|f}}
 * Louisiana Creole French: {{t|lou|Alman}}
+{{trans-mid}}
 * Low German: {{t+|nds|Düütschland|n}}, {{t|nds|Düüdschland|n}}
 * Luganda: {{t|lg|Girimane}}
 * Luhya: {{t|luy|Jamani}}
@@ -222,6 +222,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Manchu: {{t|mnc|ᡩ᠋ᡝ᠋ ᡤᡠᡵᡠᠨ}}
 * Manx: {{t|gv|Giarmaan|f}}
 * Maori: {{t|mi|Tiamani}}, {{t|mi|Tiamana}}
+* Maranao: {{t|mrw|Alimaniya}}
 * Marathi: {{t|mr|जर्मनी|?}}
 * Marshallese: {{t|mh|Jāmne}}
 * Mirandese: {{t|mwl|Almanha}}
