/* English */ raising verbs <feel#61827269>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -449,6 +449,7 @@ See {{m|en|fele}}.
 
 [[Category:English irregular verbs]]
 [[Category:English stative verbs]]
+[[Category:English raising verbs]]
 
 ----
 
