--- a/en/垕/垕.13081.wikitext
+++ b/en/垕/垕.13081.wikitext
@@ -17,7 +17,9 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation 1===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=hòu
 |c=hau6
@@ -31,7 +33,7 @@
 
 # {{rfdef|zh|sort=土06}}
 
-===Pronunciation 2===
+===Etymology 2===
 {{zh-see|厚|v}}
 
 ===References===
