t+fi:[[maakilpikonna]] ([[WT:EDIT|Assisted]]) <tortoise#61841901>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -60,7 +60,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Dutch: {{t+|nl|schildpad|f}}
 * Esperanto: {{t+|eo|testudo}}
 * Estonian: {{qualifier|tortoise or turtle}} {{t|et|kilpkonn}}
-* Finnish: {{qualifier|tortoise or turtle}} {{t+|fi|kilpikonna}}
+* Finnish: {{qualifier|tortoise or turtle}} {{t+|fi|kilpikonna}}, {{t|fi|maakilpikonna}} {{qualifier|tortoise, Testudinidae}}
 * French: {{qualifier|tortoise or turtle}} {{t+|fr|tortue|f}}
 *: Old French: {{t|fro|wecle|f}}
 * Galician: {{t+|gl|tartaruga|f}}, {{t|gl|sapoconcho|m}}
