--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -44,7 +44,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# {{rfdef|ja|sort=土05}}
+# [[clod]] of [[earth]], [[land]]
+
 
 ====Readings====
 {{ja-readings
