--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -41,34 +41,34 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Czech: {{t+|cs|např.}}
 * Danish: {{t+|da|f.eks.}}, {{t+|da|fx}} {{qualifier|{{t+|da|for eksempel}}}}
 * Dutch: {{t+|nl|bv.}}, {{t+|nl|bijv.}} {{qualifier|{{t+|nl|bijvoorbeeld}}}}
-* Esperanto: {{qualifier|[[ekzemple]]}} {{t|eo|ekz.}}
-* Estonian: {{qualifier|[[näiteks]]}} {{t+|et|nt}}
+* Esperanto: {{t|eo|ekz.}} {{qualifier|[[ekzemple]]}}
+* Estonian: {{t+|et|nt}} {{qualifier|[[näiteks]]}}
 * Faroese: {{t|fo|t.d.}} {{qualifier|{{t|fo|til dømis}}}}
-* Finnish: {{qualifier|[[esimerkiksi]]}} {{t+|fi|esim.}}
+* Finnish: {{t+|fi|esim.}} {{qualifier|[[esimerkiksi]]}}
 * French: {{t+|fr|par ex.}} {{qualifier|[[par exemple]]}}
 * Georgian: {{t+|ka|მაგ.}}
-* German: {{qualifier|[[zum Beispiel]]}} {{t+|de|z. B.}} (dated: {{qualifier|[[zum Exempel]]}} {{t|de|z. E.}}), {{qualifier|[[beispielsweise]]}} {{t+|de|bspw.}}
+* German: {{t+|de|z. B.}} {{qualifier|[[zum Beispiel]]}} (dated: {{t|de|z. E.}} {{qualifier|[[zum Exempel]]}}), {{t+|de|bspw.}} {{qualifier|[[beispielsweise]]}}
 * Greek: {{t+|el|π.χ.}}, {{t+|el|παραδείγματος χάριν}}
 * Hebrew: {{t|he|לדוגמה|tr=l'dugmá}}, {{t|he|למשל|tr=l'mashál}}
-* Hungarian: {{qualifier|[[például]]}} {{t|hu|[[pl.]]}}
+* Hungarian: {{t|hu|[[pl.]]}} {{qualifier|[[például]]}}
 * Icelandic: {{t+|is|t.d.}} {{qualifier|{{t+|is|til dæmis}}}}
 * Ido: {{t+|io|exemple}}
 * Irish: {{t|ga|m.sh.}} {{q|{{t|ga|mar shampla}}}}
-* Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
+* Italian: {{t|it|ad es.}} {{qualifier|[[ad esempio]]}}
 * Japanese: {{t+|ja|例えば|tr=tatoeba|sc=Jpan}}
 * Korean: {{t|ko|예를 들면}}
 {{trans-mid}}
 * Kurdish:
 *: Northern Kurdish: {{t|kmr|wekî mînak}}, {{t|kmr|wekî nimûne}}, {{t|kmr|mîsalen}}, {{t+|kmr|w.n.}}, {{t+|kmr|w.m.}}
-* Latin: {{t+|la|e. g.}}, {{t+|la|ex. gr.}} ''(exempli gratia)''; {{t+|la|e. c.}} ''(exempli causa)''
+* Latin: {{t+|la|e. g.}}, {{t+|la|ex. gr.}} {{q|exempli gratia}}; {{t+|la|e. c.}} {{q|exempli causa}}
 * Latvian: {{qualifier|[[piemēram]]}} {{t|lv|piem.}}
-* Lithuanian: {{qualifier|[[pavyzdžiui]]}} {{t|lt|pvz.}}
+* Lithuanian: {{t|lt|pvz.}} {{qualifier|[[pavyzdžiui]]}}
 * Luxembourgish: {{t|lb|z. B.}}
 * Macedonian: {{t+|mk|на пр.}}
 * Malay: {{t|ms|mis.}} {{qualifier|[[misalnya]]}}
 * Norwegian: {{t+|no|f.eks.}} {{qualifier|{{t+|no|for eksempel}}}}, {{t+|no|t.d.}} {{qualifier|{{t+|no|til dømes}}}}
 * Persian: {{t|fa|برای مثال|sc=Arab}}
-* Polish: {{qualifier|[[na]] [[przykład]]}} {{t+|pl|np.}}
+* Polish: {{t+|pl|np.}} {{qualifier|[[na]] [[przykład]]}}
 * Portuguese: {{t+|pt|p. ex.}}, {{qualifier|[[por exemplo]]}} {{t+|pt|ex.}}
 * Romanian: {{t|ro|de ex.}} {{qualifier|[[de exemplu]]}}, {{t|ro|e.g.}}
 * Russian: {{t|ru|напр.}} {{qualifier|[[например]]}}
