t+de:[[abheben]] ([[WT:EDIT|Assisted]]) <cut#61870395>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -507,7 +507,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Dutch: {{t+|nl|schudden}}
 * Finnish: {{t+|fi|nostaa}}
 * French: {{t+|fr|couper}}
-* German: {{t+|de|schneiden}}
+* German: {{t+|de|schneiden}}, {{t+|de|abheben}} {{qualifier|intransitive use}}
 * Greek: {{t+|el|κόβω}}
 {{trans-mid}}
 * Icelandic: {{t+|is|skipta}}, {{t+|is|skera}}, {{t+|is|draga}}
