/* Translations */ +ru <skirt#61875094>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -322,8 +322,9 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 
 {{trans-top|to move around, to avoid the centre}}
 * Galician: {{t+|gl|bordear}}
-{{trans-mid}}
 * Maori: {{t|mi|hohoni}}, {{t|mi|taku}}, {{t|mi|honi}}
+{{trans-mid}}
+* Russian: {{t+|ru|обходить}}
 {{trans-bottom}}
 
 {{checktrans-top}}
